# keydup

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
packaging/: keydup.desktop  keydup.spec
src/keydup/: __init__.py  __main__.py  app.py  db.py  domain.py  export.py  harmonics.py  library.py  logcapture.py  notation.py  paths.py
src/keydup/analysis/: analyzer.py  backends.py  keychange.py  probe.py  scanner.py  waveform.py
src/keydup/resources/: keydup.qss
src/keydup/ui/: add_folder_dialog.py  camelot_wheel.py  filter_bar.py  harmonic_dialog.py  key_timeline.py  log_window.py  main_window.py  player_bar.py  reveal.py  tag_panel.py  theme.py  track_table.py  waveform_widget.py
tests/: conftest.py  test_analysis.py  test_audio_loader.py  test_db.py  test_domain.py  test_drag_import.py  test_filters.py  test_gui_smoke.py  test_harmonics.py  test_icon.py  test_key_segments.py  test_keychange_ondemand.py  test_logview.py  test_notation.py  test_ordered_sets.py  test_playback_guard.py  test_session_autotag.py  test_tags_playback.py  test_waveform_reorder.py
